css/styles.css
.jumbotron{
  background-color: #9fdad0;
  width: 100%;
}
#logo{
  border-radius: 50%;
  display: block;
  width: 100%;
}
#portfolio{
  background-color: white;

}
#about{
  background-color: black;

}

.image{
  display: block;
  width: 80%;
  height: auto;
}
.overlay{
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #9fdad0;

}
.project:hover .overlay{
  opacity: 1;
}

.text{
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

